// BattleUnitType.h

#pragma once

enum class BattleUnitType {
  None,
  PatrolBoat,
  Interceptor,
  Cruiser,
  Dreadnought,

  InfantrySquadron,
  GrenadeLauncher,
  MobileArtillery,
  ArmoredTrain,
  OperationsHeadquarter,

  FighterJet
};
