// Cruiser.h

#pragma once

#include "BattleUnit.h"

class Cruiser : public BattleUnit {
public:
  Cruiser();
};
