// GrenadeLauncher.h

#pragma once

#include "BattleUnit.h"

class GrenadeLauncher : public BattleUnit {
public:
  GrenadeLauncher();
};
