// MobileArtillery.h

#pragma once

#include "BattleUnit.h"

class MobileArtillery : public BattleUnit {
public:
  MobileArtillery();
};
