@startuml woda-uml

skinparam backgroundColor #fefefe

package Units {
    enum BattleUnitType {
        None,

        PatrolBoat,
        Interceptor,
        Cruiser,
        Dreadnought,

        InfantrySquadron,
        GrenadeLauncher,
        MobileArtillery,
        ArmoredTrain,
        OperationsHeadquarter,

        FighterJet,
    }

    enum BattleUnitCategory {
        None,
        Land,
        Marine,
        Aerial,
    }

    abstract class BattleUnit {
        - unsigned int destroyedSegments = 0;
        # unsigned int segments = 0;
        # BattleUnitType type = None;
        # BattleUnitCategory category = None;

        + virtual ~BattleUnit() = default;
        + BattleUnitType GetType() const;
        + BattleUnitCategory GetCategory() const;
        + unsigned int GetTotalSegments() const;
        + unsigned int GetDestroyedSegments() const;
        + void DestroySegment();
        + void FixSegment();
        + void Reset();
        + bool IsDestroyed() const;
    }

    class PatrolBoat {
        + PatrolBoat();
    }

    class Interceptor {
        + Interceptor();
    }

    class Cruiser {
        + Cruiser();
    }

    class Dreadnought {
        + Dreadnought();
    }

    class InfantrySquadron {
        + InfantrySquadron();
    }

    class GrenadeLauncher {
        + GrenadeLauncher();
    }

    class MobileArtillery {
        + MobileArtillery();
    }

    class ArmoredTrain {
        + ArmoredTrain();
        + {static} bool IsValidUnitShape(const vector<Coordinates>& segments);
    }

    class OperationsHeadquarter {
        + OperationsHeadquarter();
        + {static} bool IsValidUnitShape(const vector<Coordinates>& segments);
    }

    class FighterJet {
        + FighterJet();
        + {static} bool IsValidUnitShape(const vector<Coordinates>& segments);
    }

    BattleUnit --> BattleUnitType
    BattleUnit --> BattleUnitCategory

    BattleUnit <|-- PatrolBoat
    BattleUnit <|-- Interceptor
    BattleUnit <|-- Cruiser
    BattleUnit <|-- Dreadnought

    BattleUnit <|-- InfantrySquadron
    BattleUnit <|-- GrenadeLauncher
    BattleUnit <|-- MobileArtillery
    ArmoredTrain -|> BattleUnit
    BattleUnit <|- OperationsHeadquarter

    BattleUnit <|- FighterJet
}

package Boards {
    ' Implements Protection Proxy design pattern
    interface ISegment {
        + virtual ~ISegment() = default;
        + virtual size_t Width() const = 0;
        + virtual size_t Height() const = 0;
        + virtual const vector<vector<bool>>& Segments() const = 0;
        + virtual const vector<vector<bool>>& LandSegments() const = 0;
        + virtual bool ToggleSegment(size_t x, size_t y) = 0;
        + virtual void Clear() = 0;
        ' Array[UnitType][UnitNumber] of Coordinates[]
        + virtual const UnitsMap& GetUnits() const = 0;
        + virtual void LoadLandSegments(const vector<vector<bool>>& landSegments) = 0;
    }

    class SegmentBoard {
        - size_t width;
        - size_t height;
        - vector<vector<bool>> segments;
        - optional<vector<vector<bool>>> landSegments;

        + SegmentBoard(size_t width, size_t height, bool hasLandSegments = false);
        + size_t Width() const override;
        + size_t Height() const override;
        + const vector<vector<bool>>& Segments() const override;
        + const vector<vector<bool>>& LandSegments() const override;
        + bool ToggleSegment(size_t x, size_t y) override;
        + void Clear() override;
        + const UnitsMap& GetUnits() const override;
        + void LoadLandSegments(const vector<vector<bool>>& landSegments) override;
    }

    class SegmentBoardValidator {
        - ISegment& segmentBoard;
        - const GameMode& mode;
        - UnitsMap lastUnits;

        + SegmentBoardValidator(ISegment& segmentBoard, const GameMode& mode);
        + size_t Width() const override;
        + size_t Height() const override;
        + const vector<vector<bool>>& Segments() const override;
        + const vector<vector<bool>>& LandSegments() const override;
        + bool ToggleSegment(size_t x, size_t y) override;
        + void Clear() override;
        + const UnitsMap& GetUnits() const override;
        + void LoadLandSegments(const vector<vector<bool>>& landSegments) override;
    }

    SegmentBoard ..|> ISegment
    ISegment <|. SegmentBoardValidator
    ISegment -* SegmentBoardValidator

    class GameBoard {
        - const GameMode& mode;
        - unique_ptr<ISegment> segmentBoard;
        - unique_ptr<ISegment> segmentValidator;
        - vector<vector<shared_ptr<BattleUnit>>> units;
        - vector<shared_ptr<BattleUnit>> allUnits;

        + GameBoard(const GameMode& mode);
        + size_t Width() const;
        + size_t Height() const;
        + ISegment& GetSegmentBoard();
        + const vector<vector<shared_ptr<BattleUnit>>>& Units() const;
        + void ParseSegments();
        + bool FireAt(size_t x, size_t y);
        + void FixSegment(size_t x, size_t y);
        + bool IsGameOver() const;
        + const vector<shared_ptr<BattleUnit>>& GetAllUnits() const;
        + const GameMode& GetGameMode() const;
    }

    GameBoard --> BattleUnit
    ISegment --* GameBoard
}

package Computers {
    ' Implements Strategy design pattern
    interface IComputerStrategy {
        + virtual ~IComputerStrategy() = default;
        + virtual Coordinates CalculateFireCoordinates(
        const GameBoard& board, const vector<Coordinates>& blacklistedCoordinates) const = 0;
    }

    class EasyComputerStrategy {
        + Coordinates CalculateFireCoordinates(
        const GameBoard& board, const vector<Coordinates>& blacklistedCoordinates) const override;
    }

    class MediumComputerStrategy {
        + Coordinates CalculateFireCoordinates(
        const GameBoard& board, const vector<Coordinates>& blacklistedCoordinates) const override;
    }

    class HardComputerStrategy {
        + Coordinates CalculateFireCoordinates(
        const GameBoard& board, const vector<Coordinates>& blacklistedCoordinates) const override;
    }

    EasyComputerStrategy .|> IComputerStrategy
    IComputerStrategy <|.. MediumComputerStrategy
    IComputerStrategy <|.. HardComputerStrategy

    enum ComputerType {
        None,
        Easy,
        Medium,
        Hard,
    }

    class Computer {
        - IComputerStrategy* computerStrategy;
        - ComputerType computerType;

        + Computer(ComputerType type);
        + Coordinates GetFireCoordinates(
        const GameBoard* board, const vector<Coordinates>& blacklistedCoordinates) const;
        + ComputerType GetComputerType() const;
    }

    ComputerType <- Computer
    Computer *-- IComputerStrategy
}

package Users {
    struct Statistics {
        chrono::seconds fastestWonGame = 0s;
        chrono::seconds totalPlaytime = 0s;
        unsigned int longestHitStreak = 0;
        unsigned int gamesPlayed = 0;
        unsigned int gamesWon = 0;
        unsigned int gamesLost = 0;
        unsigned int highestScore = 0;
        unsigned int totalShotsFired = 0;
        unsigned int totalShotsHit = 0;
        unsigned int totalUnitsDestroyed = 0;
    }

    enum UnlockableContent <<flags : uint64_t>> {
        None = 0x0,
        MediumComputer = 0x1,
        HardComputer = 0x1 << 1,
        SalvoMode = 0x1 << 2,
        ExtendedMode = 0x1 << 3,
        FlowerShipIcon = 0x1 << 4,
        CrosshairShipIcon = 0x1 << 5,
        StarShipIcon = 0x1 << 6,
        StoneShipIcon = 0x1 << 7,
        RedBorderColor = 0x1 << 8,
        BlueBorderColor = 0x1 << 9,
    }

    struct Achievement {
        string name;
        string description;
        UnlockableContent content;
        bool unlocked;
    }

    ' Implements Prototype design pattern
    ' Look up CRTP for Clone() implementation
    interface IClone <<template <class Derived, typename Arg>>> {
        + virtual ~IClone() = default;
        + virtual unique_ptr<Derived> Clone(Arg) = 0;
    }

    class AchievementPool {
        - unordered_map<string, Achievement> nameToAchievementMap;
        - PlayerId playerId;

        - void InitMapElement(string_view name, string_view description, UnlockableContent content);
        + AchievementPool();
        + AchievementPool(PlayerId playerId);
        + AchievementPool(const AchievementPool& other, PlayerId playerId);
        + const unordered_map<string, Achievement>& NameToAchievementMap() const;
        + void Unlock(const string& name);
        + unique_ptr<AchievementPool> Clone(PlayerId playerId) override;
    }

    IClone <|.. AchievementPool
    AchievementPool *-- Achievement

    enum Color {
        Default,
        Red,
        Black,
        Green,
        Blue,
        Gold,
        ValueCount,
    }

    enum BorderPattern {
        Default,
        Double,
        Bold,
        Rounded,
        ValueCount,
    }

    enum UnitPattern {
        Default,
        FlowerShipIcon,
        CrosshairShipIcon,
        StarShipIcon,
        StoneShipIcon,
        ValueCount,
    }

    struct UserSettings {
        Color unitColor = Default;
        Color boardColor = Default;
        Color borderColor = Default;
        BorderPattern borderPattern = Default;
        UnitPattern unitPattern = Default;
        bool autoMarkEmptyFields = false;
    }

    UserSettings --> Color
    UserSettings --> BorderPattern
    UserSettings --> UnitPattern

    class UserProfile {
        - unsigned int userId;
        - Computer* ai;
        + string name;
        + Statistics statistics;
        + unique_ptr<AchievementPool> achievements;
        + uint64_t unlockedContent;
        + UserSettings settings;

        - UserProfile(PlayerId userId, string name, Statistics statistics, unique_ptr<AchievementPool> achievements,
        uint64_t unlockedContent, UserSettings settings, Computer* ai);
        + UserProfile();
        + UserProfile(const UserProfile& other);
        + UserProfile(PlayerId userId, const string& name, unique_ptr<AchievementPool> achievements);
        + UserProfile(PlayerId userId, const string& name,
        unique_ptr<AchievementPool> achievements, Computer* ai);
        + ~UserProfile();
        + PlayerId UserId() const;
        + Computer* AI() const;
    }

    UserProfile *-- Statistics
    UserProfile -> AchievementPool
    UserProfile --> UnlockableContent
    UserProfile *-- UserSettings
    UserProfile *.. Computer

    class UserManager {
        - unsigned int nextUserId;
        - unsigned int nextComputerUserId;
        - map<PlayerId, UserProfile> users;
        - map<PlayerId, UserProfile> computers;
        - PlayerId currentUserId;
        - AchievementPool initialAchievementPool;

        - UserManager();
        + {static} UserManager& GetInstance();
        + ~UserManager();
        + const map<PlayerId, UserProfile>& Users() const;
        + map<PlayerId, const UserProfile*> UsersAndComputers() const;
        + void CreateUser(const string& name);
        + UserProfile& GetCurrentUser();
        + bool ChangeCurrentUser(PlayerId userId);
        + UserProfile& GetUserById(PlayerId userId);
        + UserProfile& CreateComputer(const string& name, ComputerType computerType);
        + void AddUserProfile(const UserProfile& userProfile);
        + void DestroyComputer(PlayerId computerId);
    }

    UserManager *-- AchievementPool
    UserManager *-- UserProfile
}

package Games {
    struct Coordinates {
        + size_t x;
        + size_t y;

        + Coordinates(size_t x, size_t y);
        + Coordinates();
    }

    ' Implements Command design pattern
    interface ICommand {
        + virtual unique_ptr<ICommand> Clone() const = 0;
        + virtual ~ICommand() = default;
        + virtual bool Execute() = 0;
        + virtual void Undo() = 0;
        + virtual unsigned int Shots() const = 0;
        + virtual unsigned int ShotsHit() const = 0;
        + virtual unsigned int UnitsDestroyed() const = 0;
        + virtual vector<Coordinates> GetCoordinates() const = 0;
    }

    class FireCommand {
        - GameBoard* board;
        - Coordinates coords;

        + FireCommand(GameBoard* board, Coordinates coords);
        + unique_ptr<ICommand> Clone() const override;
        + bool Execute() override;
        + void Undo() override;
        + unsigned int Shots() const override;
        + unsigned int ShotsHit() const override;
        + unsigned int UnitsDestroyed() const override;
        + vector<Coordinates> GetCoordinates() const override;
    }

    class SalvoFireCommand {
        - GameBoard* board;
        - vector<Coordinates> coords;

        + SalvoFireCommand(const SalvoFireCommand& other);
        + SalvoFireCommand(GameBoard* board, vector<Coordinates> coords);
        + unique_ptr<ICommand> Clone() const override;
        + bool Execute() override;
        + void Undo() override;
        + unsigned int Shots() const override;
        + unsigned int ShotsHit() const override;
        + unsigned int UnitsDestroyed() const override;
        + vector<Coordinates> GetCoordinates() const override;
    }

    ICommand <|.. FireCommand
    ICommand <|.. SalvoFireCommand
    Coordinates <-- FireCommand
    Coordinates <-- SalvoFireCommand

    enum FireCommandType {
        FireCommand,
        SalvoFireCommand,
    }

    struct GameMode {
        string name;
        string description;
        size_t boardWidth;
        size_t boardHeight;
        bool isExtended;
        FireCommandType commandType;
        unordered_map<BattleUnitType, size_t> unitPool;
    }

    GameMode --> FireCommandType

    enum GameState {
        Setting,
        Playing,
        Over,
    }

    struct Player {
        + UserProfile& profile;
        + GameBoard* board;
        + unsigned int shotsFired = 0;
        + unsigned int shotsHit = 0;
        + unsigned int score = 0;
        + unsigned int unitsDestroyed = 0;

        + Player(UserProfile& profile, GameBoard* gameBoard);
        + Player(const Player& other) = default;
    }

    Player *.. UserProfile
    Player *-- GameBoard

    class GameManager {
        - {static} unsigned int nextGameId = 1;
        - {static} Computer easyComputer = Computer(Easy);
        - {static} Computer mediumComputer = Computer(Medium);
        - {static} Computer hardComputer = Computer(Hard);
        - {static} vector<GameBoard*> gameBoards;
        - unsigned int gameId;
        - GameMode mode;
        - GameState state;
        - vector<Player> players;
        - unsigned int currentTurn;
        - vector<unique_ptr<ICommand>> history;
        - unsigned int winnerId;
        - chrono::time_point<chrono::steady_clock> gameStartPoint;
        - chrono::seconds playtime;

        - void UpdatePlayerStatistics();
        - void UpdatePlayerAchievements();
        + GameManager(const GameMode& mode, vector<UserProfile*>& profiles);
        + const GameMode& Mode() const;
        + const vector<Player>& Players();
        + unsigned int CurrentTurn() const;
        + Player& GetCurrentPlayer();
        + Player& GetPlayerAtIndex(unsigned int playerIndex);
        + GameState State() const;
        + unsigned int WinnerId() const;
        + chrono::seconds Playtime() const;
        + void StartGame();
        + bool ExecuteCommand(unique_ptr<ICommand> command, size_t enemyIndex);
        + void HandleGameOver();
        + void SaveReplay();
        + {static} Computer* GetComputerByType(ComputerType computerType);
        + {static} void RegisterGameBoard(GameBoard* board);
        + {static} const GameMode& GetGameModeByName(const char* modeName);
        + {static} void InitialzieNextGameId(unsigned int startingId);
    }

    GameManager *-- GameMode
    GameManager --> GameState
    GameManager *-- Player
    GameManager --> ICommand
    GameManager *- Computer
}

package Replays {
    struct ReplayAction {
        + size_t playerIndex;
        + size_t enemyIndex;
        + unique_ptr<ICommand> command;

        + ReplayAction(size_t playerIndex, size_t enemyIndex, unique_ptr<ICommand> command);
        + ReplayAction(const ReplayAction& other);
    }

    struct Replay {
        + unsigned int replayId;
        + vector<Player> players;
        + vector<ReplayAction> history;
        + unsigned int winnerId;
        + chrono::seconds playtime;
        + time_t timestamp;
        + GameMode mode;

        + Replay(const Replay& other);
        + Replay(unsigned int replayId, vector<Player> players, vector<ReplayAction> history,
        unsigned int winnerId, chrono::seconds playtime, time_t timestamp, GameMode& mode);
    }

    Replay <. GameManager
    Replay -> ReplayAction

    class ReplayPlayback {
        - Replay replay;
        - int currentStep = 0;

        + ReplayPlayback(const Replay& replay);
        + const Replay& Replay() const;
        + int CurrentStep() const;
        + int CurrentPlayerIndex() const;
        + int CurrentEnemyIndex() const;
        + bool StepForward();
        + bool StepBackward();
    }

    ReplayPlayback *-- Replay

    ' Implements Singleton design pattern
    class ReplayManager {
        - vector<Replay> replays;

        - ReplayManager();
        + {static} ReplayManager& GetInstance();
        + const vector<Replay>& Replays() const;
        + void SaveReplay(Replay replay);
        + ReplayPlayback Play(unsigned int replayId);
    }

    ReplayManager .> ReplayPlayback
    ReplayManager *-- Replay
}

package Main {
    class Battleships {
        + UserManager& userManager;
        + ReplayManager& replayManager;
        + {static} const GameMode STANDARD_GAME_MODE;
        + {static} const GameMode SALVO_GAME_MODE;
        + {static} const GameMode EXTENDED_GAME_MODE;
        + {static} const GameMode EXTENDED_SALVO_GAME_MODE;

        - Battleships();
        + {static} Battleships& GetInstance();
        + {static} unique_ptr<GameManager> NewGame(GameMode& mode, vector<UserProfile*>& profiles);
    }

    Battleships *-- UserManager
    Battleships *- ReplayManager
    Battleships --> GameManager
}

@enduml
